Rewording and typos.

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -214,18 +214,24 @@
    "metadata": {},
    "source": [
     "#### Advanced assets allocation strategies\n",
-    "When savings account balances differ significantly between accounts, it might be beneficial to push one type of asset into a specific account. For example, stocks are more likely to grow in the long-term and therefore are better suited for tax-free accounts, while secure and less-performant assets are better held in taxable accounts where growth would be taxed. In some other cases, it might be even more beneficial to coordinate both spousal accounts in order to optimize assets allocations. This is the case for example if only one spouse has a tax-free account. For these situations, we can instruct ARP Lab to coordinate assets allocations between spousal accounts. This is done using the `setCoordinateAR()` function call. There are two choices: one can provide a list of double entries, in which case the assets allocations for each spouse will be done separately. Here is one example:\n",
+    "When savings account balances differ significantly between accounts, it might be beneficial to push one type of asset into a specific account. For example, stocks are more likely to grow in the long-term and therefore are better suited for tax-free accounts, while secure and less-performant assets are better held in taxable accounts where growth would be taxed. Therefore, one can maintain a balanced overall portfolio while shifting assets differently in specific savings accounts.\n",
     "\n",
-    "    plan.setCoordinatedAR(initial=[[60, 30, 5, 5], [60, 30, 5, 5]], final=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
+    "In some other cases, it might be even more beneficial to coordinate both spousal accounts in order to optimize assets allocations. This is the case for example when only one spouse has a tax-free account. For these situations, we can instruct ARP Lab to coordinate assets allocations between spousal accounts.\n",
+    "\n",
+    "These advanced assets allocation strategies are done using the `setCoordinatedAR()` function call. There are two choices: one can provide a list of double entries, in which case the assets allocations for each spouse will be done separately. Here is one example:\n",
+    "\n",
+    "    plan.setCoordinatedAR(initial=[[60, 30, 5, 5], [70, 30, 0, 0]],\n",
+    "                          final=[[50, 30, 5, 15], [40, 20, 15, 25]])\n",
     "    \n",
-    "where each spouse might choose to take different allocation ratios. In this case, assets allocations will be coordinated between accounts belonging to the same individual.\n",
-    "This is in contrast with the next example, where accounts of both spouses will be optimized together. This is done by providing a single set of ratios for each bound (*initial* and *final*):\n",
+    "where each spouse chose different allocation ratios. In this case, assets allocations will only be coordinated between accounts belonging to the same individual.\n",
+    "\n",
+    "This is in contrast with the next example, where accounts of both spouses will be coordinated together. This is done by providing a single set of ratios for each bound (*initial* and *final*):\n",
     "\n",
     "    plan.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
     "    \n",
     "With these options, ARP Lab will try to pack as much stocks into the tax-free accounts, then into the tax-deferred accounts, then into the taxable accounts. For common assets, the reverse order is used and ARP Lab will attempt packing as much common assets in the taxable accounts, then the tax-deferred, etc. In these cases, the allocation ratios depend on the balance in each of the accounts, but the overall ratios of all savings accounts under consideration will be matching to one prescribed by the `setCoordinatedAR()` function. As the account balances will be evolving from one year to the other, so will the calculated ratios. At the end of a scenario, the calculated ratios can be saved in an Excel spreadsheet by using the `saveInstance()` function that will be introduced below.\n",
     "\n",
-    "As for the non-coordinated case, a call to `setCoordinatedAR()` must be followed by an interpolation as before. Examples of such commands are in the next cell, and were commented out. Just delete the `#` before the commands to enable the statements.\n",
+    "As for the non-coordinated case, a call to `setCoordinatedAR()` must be followed by an interpolation as before. Examples of such commands are in the next cell, and are commented out. Just delete the `#` before the commands to enable the statements.\n",
     "    "
    ]
   },
@@ -237,7 +243,7 @@
    "outputs": [],
    "source": [
     "# For coordination taking place for each individual separately.\n",
-    "# plan.setCoordinatedAR(initial=[[60, 30, 5, 5], [60, 30, 5, 5]], finaR=[[50, 30, 5, 15], [50, 30, 5, 15]])\n",
+    "# plan.setCoordinatedAR(initial=[[60, 30, 5, 5], [70, 30, 0, 0]], final=[[50, 30, 5, 15], [40, 20, 15, 25]])\n",
     "\n",
     "# For a single individual, of for coordinating both spousal accounts simultaneously.\n",
     "# plan.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
@@ -804,7 +810,7 @@
    "metadata": {},
    "source": [
     "## One more notch up for modeling\n",
-    "We can also run Roth minimization strategies. Using commutativity of multiplication, one can easily demonstrate that there is no point in doing a Roth conversion if the tax rate to be paid on the conversion now is the same as the one to be paid on the distribution later. However, things are much more complex in reality, and one has to take RMDs in consideration on top of all other unknown factors that can happen, including changes in the tax code. For this purpose, a simple heuristical Roth optimizer is being developed. For now, the objective function is to maximize the estate amount left at the passing of the last spouse, considering a tax bracket on the taxable portion of the estate, and under the constraint of receiving a desired income. Function will return a new plan, and an array containing proposed Roth conversions. These conversions are not yet fully optimal, as the current algorithm is biased towards early conversions.\n",
+    "We can also run Roth conversion estate maximization strategies. Using commutativity of multiplication, one can easily demonstrate that there is no point in doing a Roth conversion if the tax rate to be paid on the conversion now is the same as the one to be paid on the distribution later. However, things are much more complex in reality, and one has to take RMDs in consideration on top of all other unknown factors that can happen, including changes in the tax code. For this purpose, a simple heuristical Roth optimizer is being developed. For now, the objective function is to maximize the estate amount left at the passing of the last spouse, considering a tax bracket on the taxable portion of the estate, and under the constraint of receiving a desired income. Function will return a new plan, and an array containing proposed Roth conversions. These conversions are not yet fully optimal, as the current algorithm is biased towards early conversions.\n",
     "\n",
     "Here is an example of how it works: "
    ]
@@ -854,7 +860,7 @@
    "id": "2782b1d8-98ab-4b27-8c09-e52ef2382857",
    "metadata": {},
    "source": [
-    "### Saving configuration\n",
+    "### Saving configuration parameters\n",
     "Configuration parameters set for a run can be saved in a file, thus avoiding to re-enter the same information in the future. This is done using the `savePlan()` and `readPlan()` function calls. Note that 'readPlan()' returns a newly created plan pre-configured according to the parameters set in the configuration file."
    ]
   },
@@ -865,7 +871,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To save all configuration parameters\n",
     "arp.savePlan(plan, 'jack+jill')\n",
+    "             \n",
+    "# To create a new plan configured according to the parameters in configuration file.\n",
     "newplan = arp.readPlan('jack+jill')"
    ]
   },
