Fixed bug for single and added 4% case

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -36,6 +36,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a289fed6-6b3b-4fd6-9943-f620e1334cf9",
+   "metadata": {},
+   "source": [
+    "# The case of Jack and Jill"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "355ed178",
    "metadata": {},
    "source": [
@@ -63,7 +71,9 @@
    },
    "source": [
     "### Just some Python module bookkeeping\n",
-    "The following commands are bookkeeping calls that load the required module and set the program to display verbose informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface. These commands need to be there on any ARP Lab notebook."
+    "The following commands are bookkeeping calls that load the required module and set the program to display verbose informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface.\n",
+    "\n",
+    "These commands need to be at the beginning of an ARP Lab notebook."
    ]
   },
   {
@@ -92,6 +102,8 @@
     "In order to be able to generate a realization of the future, one must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
     "For selecting your own numbers, there are plenty of longivity predictors on the web. Pick your favorite:\n",
+    "\n",
+    "https://longivityillustrator.org\n",
     "\n",
     "https://www.livingto100.com/calculator\n",
     "\n",
@@ -143,7 +155,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Jack and Jill leave everything to each other as savings account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$500k in his 401k, and $80k in his Roth 401k and Roth IRAs. Jill has \\\\$40k in her savings bank account, \\\\$150k in a 403b, and \\\\$25k in Roth IRAs in which she contributed over the years."
+    "Jack and Jill leave everything to each other as savings account beneficiaries as entered by [1, 1]. Jack has \\\\$90k in his taxable account, \\\\$600k in his 401k, and $60k in his Roth 401k and Roth IRAs. Jill has \\\\$60k in her savings bank account, \\\\$150k in a 403b, and \\\\$40k in Roth IRAs in which she contributed over the years."
    ]
   },
   {
@@ -153,9 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setAssetBalances(taxable=[90000, 40000], \n",
-    "                      taxDeferred=[500000, 150000],\n",
-    "                      taxFree=[80000, 25000],\n",
+    "plan.setAssetBalances(taxable=[90000, 60000], \n",
+    "                      taxDeferred=[600000, 150000],\n",
+    "                      taxFree=[60000, 40000],\n",
     "                      beneficiary=[1, 1])"
    ]
   },
@@ -186,7 +198,7 @@
    "metadata": {},
    "source": [
     "In the example below, Jack's and Jill's assets allocations start in full stock equities in the tax-free account,\n",
-    "gradually transitioning to a traditional 60/40 portfolio towards the end of their life. Their tax-deferred\n",
+    "gradually transitioning to a more conservative portfolio towards the end of their life. Jill's tax-deferred\n",
     "account stays as a traditional 60/40 for the duration of the realization. Note that assets allocation ratios are entered as percentages, and that these percentages are for each type of savings account, and for each spouse. This strategy does not account for the balances in each account, but ARP Lab can deal this complexity as we will see in the advanced allocation strategies."
    ]
   },
@@ -198,12 +210,12 @@
    "outputs": [],
    "source": [
     "plan.setInitialAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                  taxDeferred=[[50, 50, 0, 0], [50, 50, 0, 0]],\n",
+    "                  taxDeferred=[[50, 50, 0, 0], [60, 40, 0, 0]],\n",
     "                  taxFree=[[100, 0, 0, 0], [100, 0, 0, 0]])\n",
     "\n",
     "plan.setFinalAR(taxable=[[0, 25, 50, 25], [0, 25, 50, 25]],\n",
-    "                taxDeferred=[[60, 40, 0, 0], [60, 40, 0, 0]],\n",
-    "                taxFree=[[60, 40, 0, 0], [60, 40, 0, 0]])\n",
+    "                taxDeferred=[[30, 50, 10, 10], [60, 40, 0, 0]],\n",
+    "                taxFree=[[30, 50, 10, 10], [60, 40, 0, 0]])\n",
     "\n",
     "plan.interpolateAR('linear')"
    ]
@@ -317,7 +329,7 @@
    "id": "f8211310-cb2a-47a3-bc21-93e049e38eb9",
    "metadata": {},
    "source": [
-    "Jill is interested to know if her situation would survive a retirement started in 1969. The following call would make exactly that."
+    "Jill is interested to know if her situation would survive a retirement started in 1969. The following call would model exactly that situation."
    ]
   },
   {
@@ -417,7 +429,7 @@
    "source": [
     "plan.setPension([0, 10000], [65, 65])\n",
     "\n",
-    "plan.setSocialSecurity([30000, 28000], [70, 70])"
+    "plan.setSocialSecurity([28000, 25000], [70, 70])"
    ]
   },
   {
@@ -722,7 +734,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.saveInstance('Jack and Jill - 1966', True)"
+    "plan.saveInstance('Jack and Jill - 1969', True)"
    ]
   },
   {
