--- a/4%_rule.ipynb
+++ b/4%_rule.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This file is provided as ann example to introduce you to ARP Lab.\n",
+    "This file is provided as an example to introduce you to ARP Lab.\n",
     "\n",
     "It is assumed that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python. If not, a simple tutorial can guide you to the basic skills needed.\n",
     "\n",
