--- a/coordination.ipynb
+++ b/coordination.ipynb
@@ -39,7 +39,7 @@
    "id": "a7c9b1a6-f17d-4f66-b738-edb44de5bc6b",
    "metadata": {},
    "source": [
-    "# The effect of coordinating assets allocations"
+    "# Exploring the effect of coordinating assets allocations with ARP Lab"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan1 = arp.Plan(YOB=[1960, 1963], expectancy=[85, 88])"
+    "plan1 = arp.Plan(YOB=[1961, 1964], expectancy=[85, 88])"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "id": "de0fc285-f789-4989-b22a-1c6fc6a9f7c5",
    "metadata": {},
    "source": [
-    "John and Mary have the following assets."
+    "John and Mary have the following assets. They leave all their assets to the surviving spouse."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "source": [
     "plan1.setAssetBalances(taxable=[50000, 40000], \n",
     "                      taxDeferred=[1000000, 400000],\n",
-    "                      taxFree=[80000, 30000],\n",
+    "                      taxFree=[80000, 40000],\n",
     "                      beneficiary=[1, 1])"
    ]
   },
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "plan1.setPension([0, 0], [65, 65])\n",
-    "plan1.setSocialSecurity([30000, 28000], [70, 70])"
+    "plan1.setSocialSecurity([30000, 26000], [70, 67])"
    ]
   },
   {
@@ -171,7 +171,7 @@
     "tags": []
    },
    "source": [
-    "## How much net income is desirable at retirement?"
+    "## How much net annual income is desirable at retirement?"
    ]
   },
   {
@@ -181,7 +181,7 @@
     "tags": []
    },
    "source": [
-    "John and Mary desire an income of \\\\$100k."
+    "John and Mary desire an annual income of \\\\$80k."
    ]
   },
   {
@@ -235,7 +235,7 @@
    "id": "7cdb063d-fbbd-4d30-978c-edc69727fe67",
    "metadata": {},
    "source": [
-    "The couple has a few Roth conversions planned and a few more years to work."
+    "The couple has a few Roth conversions planned and a few more years to work. Open the Excel file to see the details. John is also planning a few Roth conversions."
    ]
   },
   {
@@ -342,7 +342,8 @@
    "id": "d7bb31b3-efb5-46b7-a2d4-a008109bde8e",
    "metadata": {},
    "source": [
-    "#### Coordinating between accounts and spouses"
+    "#### Coordinating between accounts and spouses\n",
+    "For a single individual, `plan2` and `plan3` would lead to the same answer."
    ]
   },
   {
@@ -354,7 +355,7 @@
    "source": [
     "plan3 = arp.clone(plan1)\n",
     "\n",
-    "# For a single individual, of for coordinating both spousal accounts simultaneously.\n",
+    "# For coordinating both spousal accounts simultaneously.\n",
     "plan3.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
     "\n",
     "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
@@ -396,7 +397,7 @@
    "id": "0bfe0dbd",
    "metadata": {},
    "source": [
-    "### Show relevant info over the years"
+    "### Show some of the relevant info over the years"
    ]
   },
   {
@@ -449,7 +450,8 @@
    "id": "d649f68a-fdbf-4f46-94e5-2953ae17cf22",
    "metadata": {},
    "source": [
-    "### Coordination strategy is able to generate about 10% more in assets."
+    "### Asset allocation coordination strategy is able to generate about 10% more in assets at the end of their life!\n",
+    "And this is done while maintaining the same overall percentage of assets allocations. This benefit is overlooked when one strictly looks at tax benefits of a Roth conversion. The reality is more complex and involves RMD's, tax that the heirs pay on the tax-deferred portion of the final assets, and the greater performance achieved in tax-free accounts. "
    ]
   }
  ],
