named files consistently.

--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "## Initializing the realization\n",
     "\n",
-    "We consider John and Mary, an average couple that just retired."
+    "We consider Mary and John, an average couple that just retired."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "id": "de0fc285-f789-4989-b22a-1c6fc6a9f7c5",
    "metadata": {},
    "source": [
-    "John and Mary have the following assets. They leave all their assets to the surviving spouse."
+    "Mary and John have the following assets. They leave all their assets to the surviving spouse."
    ]
   },
   {
@@ -148,7 +148,7 @@
     "tags": []
    },
    "source": [
-    "John and Mary have no pension and average social security benefits."
+    "Mary and John have no pension and average social security benefits."
    ]
   },
   {
@@ -181,7 +181,7 @@
     "tags": []
    },
    "source": [
-    "John and Mary desire an annual income of \\\\$80k."
+    "Mary and John desire an annual income of \\\\$80k."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan1.readContributions('j+m.xlsx')"
+    "plan1.readContributions('mary+john.xlsx')"
    ]
   },
   {
