Renamed a few files and improved Roth optimizer.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -28,7 +28,7 @@
    "id": "1c851922-e372-4298-8650-627141f39890",
    "metadata": {},
    "source": [
-    "# Exploring the 4% rule of thumb with ARP Lab"
+    "# Exploring Bengen's 4% rule of thumb with ARP Lab"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "\n",
     "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These withdrawals are then adjusted for inflation and no income tax is considered. To avoid triggering the income tax machinery in ARP Lab, we will use an unrealistically small amount of \\\\$2k per year to be withdrawn from a single \\\\$50k tax-deferred account. As this scenario is meant to explore the effects of a percentage, multiplying all the numbers by 20 will convert the results of withdrawing \\\\$40k from a \\\\$1M portfolio. This can obviously be done for any other portfolio balance of interest.\n",
     "\n",
-    "Note that Bengen used data from Ibbotson while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepencies in the number of years that the accounts can sustain due to the slight difference in the rates used. The trends and conclusions are the same however."
+    "Note that Bengen used data from Ibbotson while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepencies in the number of years that the accounts can sustain due to the slight difference in the rates used. In particular, the inflation data from NYU use the urban Consumer Price Index while the SBBI data from Ibbotson uses average inflation. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
    ]
   },
   {
@@ -152,7 +152,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Sam has \\\\$50k in a single tax-deferred account for a %4 withdrawal. This amount is ridiculously small to avoid triggering income tax. Just multiply all numbers by 20 in your head. "
+    "Sam has \\\\$50k in a single tax-deferred account for a %4 withdrawal. This amount is ridiculously small to avoid triggering income tax. Just multiply all numbers by 20 in your head to get to a \\\\$1M account. "
    ]
   },
   {
@@ -194,7 +194,7 @@
    "id": "eecc3b25-ae80-4e6a-be38-1f3c66a46899",
    "metadata": {},
    "source": [
-    "For our particular 4% rule case, Sam's assets allocations use a 50/50 portfolio per Bergen's study. Note that assets allocation ratios are entered as percentages, and that these percentages are for each type of savings account."
+    "For our particular 4% rule case, Sam's assets allocations use a 50/50 portfolio per Bengen's study. Note that assets allocation ratios are entered as percentages, and that these percentages are for each type of savings account."
    ]
   },
   {
@@ -477,7 +477,7 @@
    "id": "ae05b3e9-3d36-4254-bd70-6d3db25f5a54",
    "metadata": {},
    "source": [
-    "Recall that we set the rates above to mimic those from and after 1969. For this purpose, we only need to run a single realization looking at what would happen if Jack and Jill had retired in 1969. So let's run this plan: This following call runs all the required calculations for the time horizon over Jack and Jill's life expectancies. `run()` returns many variables that we assign to the `_` variable, used to store the answer to the last command in Python. Just a trick to avoid printing all these numbers on screen. Having set the variable to verbose, `run()` will report what happens during each year modeled."
+    "Recall that we set the rates above to mimic those from and after 1966. For this purpose, we only need to run a single realization looking at what would happen if Sam had retired in 1966. So let's run this plan: The following call runs all the required calculations for the time horizon over Jack and Jill's life expectancies. `run()` returns many variables that we assign to the `_` variable, used to store the answer to the last command in Python. Just a trick to avoid printing all these numbers on screen. Having set the variable to verbose, `run()` will report what happens during each year modeled."
    ]
   },
   {
@@ -890,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
