Fixed a bug in Roth optimizer.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These withdrawals are then adjusted for inflation and no income tax is considered. To avoid triggering the income tax machinery in ARP Lab, we will use an unrealistically small amount of \\\\$2k per year to be withdrawn from a single \\\\$50k tax-deferred account. As this scenario is meant to explore the effects of a percentage, multiplying all the numbers by 20 will convert the results of withdrawing \\\\$40k from a \\\\$1M portfolio. This can obviously be done for any other portfolio balance of interest.\n",
     "\n",
-    "Note that Bengen used data from Ibbotson while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepencies in the number of years that the accounts can sustain due to the slight difference in the rates used. In particular, the inflation data from NYU use the urban Consumer Price Index while the SBBI data from Ibbotson uses average inflation. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
+    "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepencies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
    ]
   },
   {
